<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sdtname"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp"
                android:textColor="#333333"/>

            <TextView
                android:id="@+id/textViewSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sdtsex"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textColor="#333333"
                />

            <TextView
                android:id="@+id/textViewNation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sdtnation"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp"
                android:textColor="#333333"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/textViewBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sdtbirthday"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp"
                android:textColor="#333333"
                android:layout_marginTop="20dp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/photo" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdtaddress"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:textColor="#333333"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textViewPIDNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdtpidno"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:textColor="#333"
        android:layout_marginTop="20dp"/>


    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="显示相似度:"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF000000"
        android:textSize="20sp"
        android:layout_marginTop="60dp"/>


    <TextView
        android:id="@+id/face_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="识别时间:"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF000000"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>


    <ImageView
        android:id="@+id/face1"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:src="@mipmap/ic_contact_picture" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="查看"
        android:textSize="20sp"
        android:textColor="#333333"
        android:id="@+id/bt_look"/>

</LinearLayout>