<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sdtname"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#333333"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/textViewSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sdtsex"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#333333"
                android:textSize="16sp"
            />

            <TextView
                android:id="@+id/textViewNation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sdtnation"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#333333"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/textViewBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sdtbirthday"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#333333"
                android:textSize="16sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/photo"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sdtaddress"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#333333"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textViewPIDNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sdtpidno"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#333"
        android:textSize="16sp"/>


    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="显示相似度:"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF000000"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/face_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="识别时间:"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FF000000"
        android:textSize="20sp"/>


    <ImageView
        android:id="@+id/face1"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:src="@mipmap/ic_contact_picture"/>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
        <Button android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="关闭身份证"/>

        <Button android:id="@+id/btn_startread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="打开身份证"/>
    </LinearLayout>


    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_lookFaceList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="查看列表"
            android:textColor="#333333"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_saveCardInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="存储信息"
            android:textColor="#333333"
            android:textSize="20sp"/>
    </LinearLayout>


</LinearLayout>